# Subsy

./: .gitignore  .travis.yml  ReadMe.md  appveyor.yml  buddy.yml  codecov.yml  pypi.md  pyproject.toml  requirements.txt  tox.ini
.circleci/: config.yml
.github/workflows/: report_coverage.yml  test_commit.yml
deploy/: clean.py  coverage.py  release.md
docs/: api.md  conf.py  index.md  installation.md  releases.md  requirements.txt  tutorial.md
docs/api/: subsy.Subtitle.rst  subsy.Subtitles.rst  subsy.load.rst
subsy/: meta.py  readers.py
tests/: fixtures.py  test_meta.py  test_readers.py  test_subtitle.py  test_subtitles.py  test_timestamp.py  test_writers.py
tests/corpus/: encoding_ANSI.srt  encoding_UTF-8-sig.srt  encoding_UTF-8.srt  reference.ass  reference.srt  reference.ssa  reference.sub  reference.vtt
