[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = 'subsy'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = ['subtitles', '.srt', '.ass', '.ssa', '.vtt', '.sub']
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Multimedia :: Sound/Audio :: Speech',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License']
readme = 'pypi.md'
requires-python = '>=3.6'
dependencies = ['srt3', 'aeidon', 'chardet']
dynamic = ['version', 'description']

[project.optional-dependencies]
doc = ['Sphinx', 'Furo', 'MyST-parser', 'CommonMark']
test = ['pyTest', 'pyTest-cov', 'flake8']

[project.urls]
Documentation = 'https://subsy.readthedocs.io'
Source = 'https://github.com/John-Hennig/subsy'
