# Meta information: PyPI and pip

[project]
name = 'subsy'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = ['subtitles', '.srt', '.ass', '.ssa', '.vtt', '.sub']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
    'Topic :: Multimedia :: Sound/Audio :: Speech',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License']
readme = 'pypi.md'
requires-python = '>=3.6'
dependencies = ['srt3', 'aeidon', 'chardet']
dynamic = ['version', 'description']

[project.optional-dependencies]
docs = ['Sphinx', 'Furo', 'MyST-parser', 'CommonMark']
test = ['pyTest', 'pyTest-cov', 'flake8', 'pyproject-flake8']

[project.urls]
Documentation = 'https://subsy.readthedocs.io'
Source = 'https://github.com/john-hen/subsy'


# Wheel builder: flit

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"


# Code linter: flake8 (via pyproject-flake8, run with `pflake8`)

[tool.flake8]
exclude = ['.git', '.tox', '__pycache__', 'develop']
ignore = [
    'E127', 'E128',
    'E201', 'E202',
    'E221', 'E222',
    'E226',
    'E231',
    'E241',
    'E251',
    'E261',
    'E271', 'E272',
    'E402',
    'W503',
]
per-file-ignores = ['__init__.py:F401']


# Test runner: pyTest

[tool.pytest.ini_options]
addopts = '--verbose'
testpaths = ['tests']


# Code coverage: Coverage.py

[tool.coverage.run]
source = ['subsy/']
relative_files = true

[tool.coverage.report]
exclude_lines = ['pragma: no cover']


# Environment tests: Tox

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py39,py310
isolated_build = True

[testenv]
commands =
    pip install .[test]
    pytest
"""
